syntax = "proto3";

package vou.proto;

import "counterpart/store.proto";

option go_package = "VOU-Server/proto/gen";

message UpdateStoreRequest {
  string owner = 1;
  int64 id = 2;
  optional string name = 3;
  optional string business_type = 4;
}

message UpdateStoreResponse {
  Store store = 1;
}